test/fails/bad_parsing/bad_function2.lgl
int f( { //Unmatched parens
    return 0;
}

void main() {
    return;
}